<resources>
    <string name="app_name">Homework3</string>

    <string name="Austria">Austria</string>
    <string name="Poland">Poland</string>
    <string name="Italy">Italy</string>
    <string name="Colombia">Colombia</string>
    <string name="Thailand">Thailand</string>
    <string name="Denmark">Denmark</string>
    <string name="Madagascar">Madagascar</string>
    <string name="Switzerland">Switzerland</string>

</resources>